couchbase-lite/3.1/csharp/replication.md
---
title: Data Sync using Sync Gateway
description: Couchbase Lite for C# -- Synchronizing data changes between local
  and remote databases using Sync Gateway
editUrl: https://github.com/couchbase/docs-couchbase-lite/edit/release/3.1/modules/csharp/pages/replication.adoc
pubDate: 2026-03-25T08:25:24.097Z
link: xref:3.1@couchbase-lite:csharp:replication.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/couchbase-lite/3.1/csharp/replication.html)

# Data Sync using Sync Gateway

> Description — _Couchbase Lite for C# — Synchronizing data changes between local and remote databases using Sync Gateway_  
> Related Content — [Handling Data Conflicts](conflict.md) | [Intra-Device](dbreplica.md) | [Peer-to-Peer](p2psync-websocket.md)

> [!NOTE]
> Code Snippets
> 
> All code examples are indicative only. They demonstrate the basic concepts and approaches to using a feature. Use them as inspiration and adapt these examples to best practice when developing applications for your platform.

## [](#introduction)Introduction

Couchbase Lite for C#.Net provides API support for secure, bi-directional, synchronization of data changes between mobile applications and a central server database. It does so by using a _replicator_ to interact with Sync Gateway.

The _replicator_ is designed to manage replication of documents and-or document changes between a source and a target database. For example, between a local Couchbase Lite database and remote Sync Gateway database, which is ultimately mapped to a bucket in a Couchbase Server instance in the cloud or on a server.

This page shows sample code and configuration examples covering the implementation of a replication using Sync Gateway.

Your application runs a replicator (also referred to here as a client), which will initiate connection with a Sync Gateway (also referred to here as a server) and participate in the replication of database changes to bring both local and remote databases into sync.

Subsequent sections provide additional details and examples for the main configuration options.

## [](#replication-concepts)Replication Concepts

Couchbase Lite allows for one database for each application running on the mobile device. This database can contain one or more scopes. Each scope can contain one or more collections.

To learn about Scopes and Collections, see [Databases](database.md)

You can set up a replication scheme across these data levels:

Database

The `_default` collection is synced.

Collection

A specific collection or a set of collections is synced.

As part of the syncing setup, the Gateway has to map the Couchbase Lite database to the database being synced on Capella.

## [](#replication-protocol)Replication Protocol

### [](#scheme)Scheme

Couchbase Mobile uses a replication protocol based on WebSockets for replication. To use this protocol the replication URL should specify WebSockets as the URL scheme (see the [Configure Target](#lbl-cfg-tgt) section below).

Incompatibilities

Couchbase Lite’s replication protocol is **incompatible** with CouchDB-based databases. And since Couchbase Lite 2.x+ only supports the new protocol, you will need to run a version of Sync Gateway that supports it — see: [Compatibility](compatibility.md).

Legacy Compatibility

Clients using Couchbase Lite 1.x can continue to use `http` as the URL scheme. Sync Gateway 2.x+ will automatically use:

* The 1.x replication protocol when a Couchbase Lite 1.x client connects through `http://localhost:4984/db`
* The 2.0 replication protocol when a Couchbase Lite 2.0 client connects through `ws://localhost:4984/db`.

You can find further information in our blog: [Introducing the Data Replication Protocol](https://blog.couchbase.com/data-replication-couchbase-mobile/).

### [](#lbl-repl-ord)Ordering

To optimize for speed, the replication protocol doesn’t guarantee that documents will be received in a particular order. So we don’t recommend to rely on that when using the replication or database change listeners for example.

## [](#scopes-and-collections)Scopes and Collections

Scopes and Collections allow you to organize your documents in Couchbase Lite.

When syncing, you can configure the collections to be synced.

The collections specified in the Couchbase Lite replicator setup must exist (both scope and collection name must be identical) on the Sync Gateway side, otherwise starting the Couchbase Lite replicator will result in an error.

During replication:

1. If Sync Gateway config (or server) is updated to remove a collection that is being synced, the client replicator will be offline and will be stopped after the first retry. An error will be reported.
2. If Sync Gateway config is updated to add a collection to a scope that is being synchronized, the replication will ignore the collection. The added collection will not automatically sync until the Couchbase Lite replicator’s configuration is updated.

### [](#default-collection)Default Collection

When upgrading Couchbase Lite to 3.1, the existing documents in the database will be automatically migrated to the default collection.

For backward compatibility with the code prior to 3.1, when you set up the replicator with the database, the default collection will be set up to sync with the default collection on Sync Gateway.

Sync Couchbase Lite database with the default collection on Sync Gateway

![Sync Couchbase Lite database with the default collection on Sync Gateway](../_images/cbl-replication-scopes-collections-1.png)

Sync Couchbase Lite default collection with default collection on Sync Gateway

![Sync Couchbase Lite default collection with default collection on Sync Gateway](../_images/cbl-replication-scopes-collections-2.png)

### [](#user-defined-collections)User-Defined Collections

The user-defined collections specified in the Couchbase Lite replicator setup must exist (and be identical) on the Sync Gateway side to sync.

Syncing scope with user-defined collections.

![Syncing scope with user-defined collections.](../_images/cbl-replication-scopes-collections-3.png)

Syncing scope with user-defined collections. Couchbase Lite has more collections than the Sync Gateway configuration (with collection filters)

![Syncing scope with user-defined collections. Couchbase Lite has more collections than the Sync Gateway configuration (with collection filters)](../_images/cbl-replication-scopes-collections-4.png)

## [](#configuration-summary)Configuration Summary

You should configure and initialize a replicator for each Couchbase Lite database instance you want to sync. [Example 1](#ex-simple-repl) shows the configuration and initialization process.

> [!NOTE]
> You need Couchbase Lite 3.1+ and Sync Gateway 3.1+ to use `custom` Scopes and Collections.  
> If you’re using Capella App Services or Sync Gateway releases that are older than version 3.1, you won’t be able to access `custom` Scopes and Collections. To use Couchbase Lite 3.1+ with these older versions, you can use the `default` Collection as a backup option.

Click the **GitHub** tab in the code examples for further details.

Example 1\. Replication configuration and initialization

```C#

#warning p2p-act-rep-config-type used, but contains nothing


#warning autopurge-override used, but contains nothing
// Set autopurge option
// here we override its default


#warning p2p-act-rep-config-cont used, but contains nothing
// Configure Sync Mode


#warning p2p-act-rep-config-self-cert used, but contains nothing
// Configure Server Security -- only accept self-signed certs


// Configure Client Security (1)

#warning p2p-act-rep-auth used, but contains nothing
// Configure basic auth using user credentials


#warning p2p-act-rep-start-full used, but contains nothing
// Initialize and start a replicator
// Initialize replicator with configuration data

#warning p2p-act-rep-add-change-listener used, but contains nothing
#warning p2p-act-rep-add-change-listener-label used, but contains nothing
//Optionally add a change listener (2)


#warning p2p-act-rep-start used, but contains nothing
// Start replicator
```

**Notes on Example**

| **1** | get endpoint for target DB                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| ----- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **2** | Use the [ReplicatorConfiguration](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html) class’s constructor — [ReplicatorConfiguration(Database database, IEndpoint target)](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5F%5Fctor%5FCouchbase%5FLite%5FDatabase%5FCouchbase%5FLite%5FSync%5FIEndpoint) — to initialize the replicator configuration with the local database — see also: [Configure Target](#lbl-cfg-tgt) |
| **3** | The default is to auto-purge documents that this user no longer has access to — see: [Auto-purge on Channel Access Revocation](#anchor-auto-purge-on-revoke). Here we over-ride this behavior by setting its flag false.                                                                                                                                                                                                                                                                                                                                                                                   |
| **4** | Configure how the client will authenticate the server. Here we say connect only to servers presenting a self-signed certificate. By default, clients accept only servers presenting certificates that can be verified using the OS bundled Root CA Certificates — see: [Server Authentication](#lbl-svr-auth).                                                                                                                                                                                                                                                                                             |
| **5** | Configure the client-authentication credentials (if required). These are the credential the client will present to sync gateway if requested to do so.Here we configure to provide _Basic Authentication_ credentials. Other options are available — see: [Client Authentication](#lbl-client-auth).                                                                                                                                                                                                                                                                                                       |
| **6** | Configure how the replication should handle conflict resolution — see: [Handling Data Conflicts](conflict.md) topic for mor on conflict resolution.                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| **7** | Initialize the replicator using your configuration — see: [Initialize](#lbl-init-repl).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| **8** | Optionally, register an observer, which will notify you of changes to the replication status — see: [Monitor](#lbl-repl-mon)                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| **9** | Start the replicator — see: [Start Replicator](#lbl-repl-start).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |

## [](#lbl-cfg-repl)Configure

In this section

[Configure Target](#lbl-cfg-tgt)| [Sync Mode](#lbl-cfg-sync)| [Retry Configuration](#lbl-cfg-keep-alive)| [User Authorization](#lbl-user-auth)| [Server Authentication](#lbl-svr-auth)| [Client Authentication](#lbl-client-auth)| [Monitor Document Changes](#lbl-repl-evnts)| [Custom Headers](#lbl-repl-hdrs)| [Checkpoint Starts](#lbl-repl-ckpt)| [Replication Filters](#lbl-repl-fltrs)| [Channels](#lbl-repl-chan)| [Auto-purge on Channel Access Revocation](#anchor-auto-purge-on-revoke)| [Delta Sync](#lbl-repl-delta)

### [](#lbl-cfg-tgt)Configure Target

Use the Initialize and define the replication configuration with local and remote database locations using the [ReplicatorConfiguration](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html) object.

The constructor provides:

* the name of the local database to be sync’d
* the server’s URL (including the port number and the name of the remote database to sync with)  
It is expected that the app will identify the IP address and URL and append the remote database name to the URL endpoint, producing for example: `wss://10.0.2.2:4984/travel-sample`  
The URL scheme for web socket URLs uses `ws:` (non-TLS) or `wss:` (SSL/TLS) prefixes.

Example 2\. Add Target to Configuration

```C#
// initialize the replicator configuration

var url = new URLEndpoint(new Uri("wss://10.0.2.2:4984/anotherDB")); (1)
var replConfig = new ReplicatorConfiguration(url);
// Add collections to the config now
```

| **1** | Note use of the scheme prefix (wss://to ensure TLS encryption — strongly recommended in production — or ws://) |
| ----- | -------------------------------------------------------------------------------------------------------------- |

### [](#lbl-cfg-sync)Sync Mode

Here we define the direction and type of replication we want to initiate.

We use `[ReplicatorConfiguration](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html)` class’s [ReplicatorType](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FReplicatorType) and `[Continuous](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FContinuous)` parameters, to tell the replicator:

* The type (or direction) of the replication: `**pushAndPull**`; `pull`; `push`
* The replication mode, that is either of:

  * Continuous — remaining active indefinitely to replicate changed documents (`continuous=true`).
  * Ad-hoc — a one-shot replication of changed documents (`continuous=false`).

Example 3\. Configure replicator type and mode

```C#

// Configure Sync Mode
```

> [!TIP]
> Unless there is a solid use-case not to, always initiate a single `PUSH_AND_PULL` replication rather than identical separate `PUSH` and `PULL` replications.
> 
> This prevents the replications generating the same checkpoint `docID` resulting in multiple conflicts.

### [](#lbl-cfg-keep-alive)Retry Configuration

Couchbase Lite for C#.Net’s replication retry logic assures a resilient connection.

The replicator minimizes the chance and impact of dropped connections by maintaining a heartbeat; essentially pinging the Sync Gateway at a configurable interval to ensure the connection remains alive.

In the event it detects a transient error, the replicator will attempt to reconnect, stopping only when the connection is re-established, or the number of retries exceeds the retry limit (9 times for a single-shot replication and unlimited for a continuous replication).

On each retry the interval between attempts is increased exponentially (exponential backoff) up to the maximum wait time limit (5 minutes).

The REST API provides configurable control over this replication retry logic using a set of configiurable properties — see: [Table 1](#tbl-repl-retry).

__Table 1\. Replication Retry Configuration Properties__
| Property                                                                                                                                                                                                       | Use cases                                                                                                                                                                                                                         | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [Heartbeat()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FHeartbeat)                   | Reduce to detect connection errors sooner Align to load-balancer or proxy keep-alive interval — see Sync Gateway’s topic [Load Balancer - Keep Alive](../../../sync-gateway/current/deploy/load-balancer.md#websocket-connection) | The interval (in seconds) between the heartbeat pulses. Default: The replicator pings the Sync Gateway every 300 seconds.                                                                                                                                                                                                                                                                                                                                                                         |
| [MaxAttempts()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FMaxAttempts)               | Change this to limit or extend the number of retry attempts.                                                                                                                                                                      | The maximum number of retry attempts Set to zero (0) to use default values Set to zero (1) to prevent any retry attempt The retry attempt count is reset when the replicator is able to connect and replicate Default values are: Single-shot replication = 9; Continuous replication = maximum integer value Negative values generate a Couchbase exception InvalidArgumentException                                                                                                             |
| [MaxAttemptWaitTime()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FMaxAttemptWaitTime) | Change this to adjust the interval between retries.                                                                                                                                                                               | The maximum interval between retry attempts While you can configure the **maximum permitted** wait time, the replicator’s exponential backoff algorithm calculates each individual interval which is not configurable. Default value: 300 seconds (5 minutes) Zero sets the maximum interval between retries to the default of 300 seconds 300 sets the maximum interval between retries to the default of 300 seconds A negative value generates a Couchbase exception, InvalidArgumentException |

When necessary you can adjust any or all of those configurable values — see: [Example 4](#ex-repl-retry) for how to do this.

Example 4\. Configuring Replication Retries

```C#
            var url = new Uri("ws://localhost:4984/mydatabase");
            var target = new URLEndpoint(url);

            var config = new ReplicatorConfiguration(target);

            //  other config as required . . .

#warning replication-set-heartbeat unused?
            config.Heartbeat = TimeSpan.FromSeconds(120); //  (1)

#warning replication-set-maxattempts unused?
            config.MaxAttempts = 20; //  (2)

#warning replication-set-maxattemptwaittime unused?
            config.MaxAttemptsWaitTime = TimeSpan.FromSeconds(600); //  (3)

            //  other config as required . . .

            var replicator = new Replicator(config);
```

| **1** | Here we use [Heartbeat()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FHeartbeat) to set the required interval (in seconds) between the heartbeat pulses |
| ----- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **2** | Here we use [MaxAttempts()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FMaxAttempts) to set the required number of retry attempts                       |
| **3** | Here we use [MaxAttemptWaitTime()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FMaxAttemptWaitTime) to set the required interval between retry attempts. |

### [](#lbl-user-auth)User Authorization

By default, Sync Gateway does not enable user authorization. This makes it easier to get up and running with synchronization.

You can enable authorization in the sync gateway configuration file, as shown in [Example 5](#example-enable-authorization).

Example 5\. Enable Authorization

```json
{
  "databases": {
    "mydatabase": {
      "users": {
        "GUEST": {"disabled": true}
      }
    }
  }
}
```

To authorize with Sync Gateway, an associated user must first be created. Sync Gateway users can be created through the [POST /{db}/\_user](../../../sync-gateway/current/rest-api/rest-api-admin.md#/user/post%5F%5Fdb%5F%5F%5Fuser%5F)endpoint on the Admin REST API.

### [](#lbl-svr-auth)Server Authentication

Define the credentials your app (the client) is expecting to receive from the Sync Gateway (the server) in order to ensure it is prepared to continue with the sync.

Note that the client cannot authenticate the server if TLS is turned off. When TLS is enabled (Sync Gateway’s default) the client _must_ authenticate the server. If the server cannot provide acceptable credentials then the connection will fail.

Use `[ReplicatorConfiguration](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html)` properties [AcceptOnlySelfSignedServerCertificate](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FAcceptOnlySelfSignedServerCertificate) and [PinnedServerCertificate](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FPinnedServerCertificate), to tell the replicator how to verify server-supplied TLS server certificates.

* If there is a pinned certificate, nothing else matters, the server cert must **exactly** match the pinned certificate.
* If there are no pinned certs and [AcceptOnlySelfSignedServerCertificate](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FAcceptOnlySelfSignedServerCertificate) is `true` then any self-signed certificate is accepted. Certificates that are not self signed are rejected, no matter who signed them.
* If there are no pinned certificates and [AcceptOnlySelfSignedServerCertificate](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FAcceptOnlySelfSignedServerCertificate) is `false` (default), the client validates the server’s certificates against the system CA certificates. The server must supply a chain of certificates whose root is signed by one of the certificates in the system CA bundle.

Example 6\. Set Server TLS security

* CA Cert
* Self Signed Cert
* Pinned Certificate

Set the client to expect and accept only CA attested certificates.

```C#
// Configure Server Security -- only accept CA certs
```

| **1** | This is the default. Only certificate chains with roots signed by a trusted CA are allowed. Self signed certificates are not allowed. |
| ----- | ------------------------------------------------------------------------------------------------------------------------------------- |

Set the client to expect and accept only self-signed certificates

```C#
// Configure Server Security -- only accept self-signed certs
```

| **1** | Set this to true to accept any self signed cert. Any certificates that are not self-signed are rejected. |
| ----- | -------------------------------------------------------------------------------------------------------- |

Set the client to expect and accept only a pinned certificate.

```C#
// Only CA Certs accepted
```

This all assumes that you have configured the Sync Gateway to provide the appropriate SSL certificates, and have included the appropriate certificate in your app bundle — for more on this see: [Certificate Pinning](#lbl-cert-pinning).

### [](#lbl-client-auth)Client Authentication

There are two ways to authenticate from a Couchbase Lite client: [Basic Authentication](#basic-authentication) or [Session Authentication](#session-authentication).

#### [](#basic-authentication)Basic Authentication

You can provide a user name and password to the basic authenticator class method. Under the hood, the replicator will send the credentials in the first request to retrieve a `SyncGatewaySession` cookie and use it for all subsequent requests during the replication. This is the recommended way of using basic authentication. [Example 7](#ex-base-auth) shows how to initiate a one-shot replication as the user **username** with the password **password**.

Example 7\. Basic Authentication

```C#
var url = new Uri("ws://localhost:4984/mydatabase");
var target = new URLEndpoint(url);
var config = new ReplicatorConfiguration(target);
config.AddCollection(collection);
config.Authenticator = new BasicAuthenticator("john", "pass");

var replicator = new Replicator(config);
replicator.Start();
```

#### [](#session-authentication)Session Authentication

Session authentication is another way to authenticate with Sync Gateway.

A user session must first be created through the [POST /{db}/\_session](../../../sync-gateway/current/rest-api/rest-api.md#/session/post%5F%5Fdb%5F%5F%5Fsession)endpoint on the Public REST API.

The HTTP response contains a session ID which can then be used to authenticate as the user it was created for.

See [Example 8](#ex-session-auth), which shows how to initiate a one-shot replication with the session ID returned from the `POST /{db}/_session` endpoint.

Example 8\. Session Authentication

```C#
var url = new Uri("ws://localhost:4984/mydatabase");
var target = new URLEndpoint(url);
var config = new ReplicatorConfiguration(target);
config.AddCollection(collection);
config.Authenticator = new SessionAuthenticator("904ac010862f37c8dd99015a33ab5a3565fd8447");

var replicator = new Replicator(config);
replicator.Start();
```

### [](#lbl-repl-hdrs)Custom Headers

Custom headers can be set on the configuration object. The replicator will then include those headers in every request.

This feature is useful in passing additional credentials, perhaps when an authentication or authorization step is being done by a proxy server (between Couchbase Lite and Sync Gateway) — see [Example 9](#ex-cust-hdr).

Example 9\. Setting custom headers

```C#
var config = new ReplicatorConfiguration(target)
{
    Headers = new Dictionary<string, string>
    {
        ["CustomHeaderName"] = "Value"
    }
};
```

### [](#lbl-repl-fltrs)Replication Filters

Replication Filters allow you to have quick control over the documents stored as the result of a push and/or pull replication.

#### [](#push-filter)Push Filter

The push filter allows an app to push a subset of a database to the server. This can be very useful. For instance, high-priority documents could be pushed first, or documents in a "draft" state could be skipped.

Push Filter

```C#
var url = new Uri("ws://localhost:4984/mydatabase");
var target = new URLEndpoint(url);

var config = new ReplicatorConfiguration(target);
config.AddCollection(collection, new CollectionConfiguration()
{
    PushFilter = (document, flags) => (1)
    {
        if (flags.HasFlag(DocumentFlags.Deleted)) {
            return false;
        }

        return true;
    }
});

// Dispose() later
var replicator = new Replicator(config);
replicator.Start();
```

| **1** | The callback should follow the semantics of a [pure function](https://en.wikipedia.org/wiki/Pure%5Ffunction). Otherwise, long running functions would slow down the replicator considerably. Furthermore, your callback should not make assumptions about what thread it is being called on. |
| ----- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |

#### [](#pull-filter)Pull Filter

The pull filter gives an app the ability to validate documents being pulled, and skip ones that fail. This is an important security mechanism in a peer-to-peer topology with peers that are not fully trusted.

> [!NOTE]
> Pull replication filters are not a substitute for channels. Sync Gateway [channels](../../../sync-gateway/current/access-control/channels.md)are designed to be scalable (documents are filtered on the server) whereas a pull replication filter is applied to a document once it has been downloaded.

```C#
var url = new Uri("ws://localhost:4984/mydatabase");
var target = new URLEndpoint(url);

var config = new ReplicatorConfiguration(target);
config.AddCollection(collection, new CollectionConfiguration()
{
    PullFilter = (document, flags) => (1)
    {
        if (document.GetString("type") == "draft") {
            return false;
        }

        return true;
    }
});

// Dispose() later
var replicator = new Replicator(config);
replicator.Start();
```

| **1** | The callback should follow the semantics of a [pure function](https://en.wikipedia.org/wiki/Pure%5Ffunction). Otherwise, long running functions would slow down the replicator considerably. Furthermore, your callback should not make assumptions about what thread it is being called on. |
| ----- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |

Losing access to a document via the Sync Function.

Losing access to a document (via the Sync Function) also triggers the pull replication filter.

Filtering out such an event would retain the document locally.

As a result, there would be a local copy of the document disjointed from the one that resides on Couchbase Server.

Further updates to the document stored on Couchbase Server would not be received in pull replications and further local edits could be pushed but the updated versions will not be visible.

For more information, see [Auto Purge on Revoke](#auto-purge-on-revoke).

### [](#lbl-repl-chan)Channels

By default, Couchbase Lite gets all the channels to which the configured user account has access.

This behavior is suitable for most apps that rely on [user authentication](../../../sync-gateway/current/security/authentication-users.md)and the [sync function](../../../sync-gateway/current/access-control/sync-function/sync-function-api.md)to specify which data to pull for each user.

Optionally, it’s also possible to specify a string array of channel names on Couchbase Lite’s replicator configuration object. In this case, the replication from Sync Gateway will only pull documents tagged with those channels.

### [](#anchor-auto-purge-on-revoke)Auto-purge on Channel Access Revocation

> [!CAUTION]
> This is a Breaking Change at 3.0

#### [](#new-outcome)New outcome

By default, when a user loses access to a channel all documents in the channel (that do not also belong to any of the user’s other channels) are auto-purged from the local database (in devices belonging to the user).

#### [](#prior-outcome)Prior outcome

_Previously these documents remained in the local database_

Prior to this release, CBL auto-purged only in the case when the user loses access to a document by removing the doc from all of the channels belong to the user. Now, in addition to 2.x auto purge, Couchbase Lite will also auto-purges the docs when the user loses access to the doc via channel access revocation. This feature is enabled by default, but an opt-out is available.

#### [](#behavior)Behavior

Users may lose access to channels in a number of ways:

* User loses direct access to channel
* User is removed from a role
* A channel is removed from a role the user is assigned to

By default, when a user loses access to a channel, the next Couchbase Lite Pull replication auto-purges all documents in the channel from local Couchbase Lite databases (on devices belonging to the user) **unless** they belong to any of the user’s other channels — see: [Table 2](#tbl-revoke-behavior).

Documents that exist in multiple channels belonging to the user (even if they are not actively replicating that channel) are not auto-purged unless the user loses access to all channels.

When the auto-purge setting is set to `true`, users will receive an `AccessRemoved` notification from the DocumentListener if they lose document access due to channel access revocation.

__Table 2\. Behavior following access revocation__
| System State     | Impact on Sync                                                                       |                                                                                                                                               |
| ---------------- | ------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------- |
| Replication Type | Access Control on Sync Gateway                                                       | Expected behavior when _enable\_auto\_purge=true_                                                                                             |
| Pull only        | User revoked access to channel. Sync Function includes requireAccess(revokedChannel) | Previously synced documents are auto purged on local                                                                                          |
| Push only        | User revoked access to channel. Sync Function includes requireAccess(revokedChannel) | No impact of auto-purge Documents get pushed but are rejected by Sync Gateway                                                                 |
| Push-pull        | User revoked access to channelSync Function includes requireAccess(revokedChannel)   | Previously synced documents are auto purged on Couchbase Lite. Local changes continue to be pushed to remote but are rejected by Sync Gateway |

If a user subsequently regains access to a lost channel, then any previously auto-purged documents still assigned to any of their channels are automatically pulled down by the active Sync Gateway when they are next updated — see behavior summary in [Table 3](#tbl-regain-behavior)

__Table 3\. Behavior if access is regained__
| System State     | Impact on Sync                                                                                                     |                                                                                                                                                                                                                                                                                            |
| ---------------- | ------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| Replication Type | Access Control on Sync Gateway                                                                                     | Expected behavior when _enable\_auto\_purge=true_                                                                                                                                                                                                                                          |
| Pull only        | User REASSIGNED access to channel                                                                                  | Previously purged documents that are still in the channel are automatically pulled by Couchbase Lite when they are next updated                                                                                                                                                            |
| Push only        | User REASSIGNED access to channel Sync Function includes requireAccess (reassignedChannel) No impact of auto-purge | Local changes previously rejected by Sync Gateway will not be automatically pushed to remote unless resetCheckpoint is involved on CBL. Document changes subsequent to the channel reassignment will be pushed up as usual.                                                                |
| Push-pull        | User REASSIGNED access to channel Sync Function includes requireAccess (reassignedChannel)                         | Previously purged documents are automatically pulled by couchbase lite Local changes previously rejected by Sync Gateway will not be automatically pushed to remote unless resetCheckpoint is involved. Document changes subsequent to the channel reassignment will be pushed up as usual |

#### [](#config)Config

Auto-purge behavior is controlled primarily by the ReplicationConfiguration option [EnableAutoPurge](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FEnableAutoPurge). Changing the state of this will impact **only** future replications; the replicator will not attempt to sync revisions that were auto purged on channel access removal. Clients wishing to sync previously removed documents must use the resetCheckpoint API to resync from the start.

Example 10\. Setting auto-purge

```C#
// Set autopurge option
// here we override its default
```

| **1** | Here we have opted to turn off the auto purge behavior. By default auto purge is enabled. |
| ----- | ----------------------------------------------------------------------------------------- |

#### [](#overrides)Overrides

Where necessary, clients can override the default auto-purge behavior. This can be done either by setting [EnableAutoPurge](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorConfiguration.html#Couchbase%5FLite%5FSync%5FReplicatorConfiguration%5FEnableAutoPurge) to false, or for finer control by applying pull-filters — see: [Table 4](#tbl-pull-filters) and [Replication Filters](#lbl-repl-fltrs)This ensures backwards compatible with 2.8 clients that use pull filters to prevent auto purge of removed docs.

__Table 4\. Impact of Pull-Filters__
| purge\_on\_removal setting | Pull Filter                                                                                         |                               |
| -------------------------- | --------------------------------------------------------------------------------------------------- | ----------------------------- |
| Not Defined                | Defined to filter removals/revoked docs                                                             |                               |
| disabled                   | Doc remains in local database App notified of “accessRemoved” if a _Documentlistener_ is registered |                               |
| enabled (DEFAULT)          | Doc is auto purged App notified of “accessRemoved” if _Documentlistener_ registered                 | Doc remains in local database |

### [](#lbl-repl-delta)Delta Sync

> [!IMPORTANT]
> This is an [Enterprise Edition](https://www.couchbase.com/products/editions) feature.

With Delta Sync \[[1](#%5Ffootnotedef%5F1 "View footnote.")\], only the changed parts of a Couchbase document are replicated. This can result in significant savings in bandwidth consumption as well as throughput improvements, especially when network bandwidth is typically constrained.

Replications to a Server (for example, a Sync Gateway, or passive listener) automatically use delta sync if the property is enabled at database level by the server — see: [databases.$db.delta\_sync.enabled](../../../sync-gateway/current/configuration/configuration-properties-legacy.md#databases-foo%5Fdb-delta%5Fsync).

[Intra-Device](dbreplica.md)replications automatically **disable** delta sync, whilst [Peer-to-Peer](p2psync-websocket.md)replications automatically **enable** delta sync.

## [](#lbl-init-repl)Initialize

In this section

[Start Replicator](#lbl-repl-start) | [Checkpoint Starts](#lbl-repl-ckpt)

### [](#lbl-repl-start)Start Replicator

Use the `[Replicator](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html)` class’s [(ReplicatorConfiguration config)](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5F%5Fctor%5FCouchbase%5FLite%5FSync%5FReplicatorConfiguration%5F) constructor, to initialize the replicator with the configuration you have defined. You can, optionally, add a change listener (see [Monitor](#lbl-repl-mon)) before starting the replicator running using [Start()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FStart).

Example 11\. Initialize and run replicator

```C#
// Initialize and start a replicator
// Initialize replicator with configuration data

#warning p2p-act-rep-add-change-listener used, but contains nothing

#warning p2p-act-rep-start used, but contains nothing
// Start replicator
```

| **1** | Initialize the replicator with the configuration |
| ----- | ------------------------------------------------ |
| **2** | Start the replicator                             |

### [](#lbl-repl-ckpt)Checkpoint Starts

Replicators use [checkpoints](refer-glossary.md#checkpoint) to keep track of documents sent to the target database.

Without [checkpoints](refer-glossary.md#checkpoint), Couchbase Lite would replicate the entire database content to the target database on each connection, even though previous replications may already have replicated some or all of that content.

This functionality is generally not a concern to application developers. However, if you do want to force the replication to start again from zero, use the [checkpoint](refer-glossary.md#checkpoint) reset argument when starting the replicator — as shown in [Example 12](#ex-repl-ckpt).

Example 12\. Resetting checkpoints

```C#
// replicator is a Replicator instance
if (resetCheckpointRequired_Example) {
    replicator.Start(true); (1)
} else { 
    replicator.Start(false);
}

// Stop and dispose replicator later
```

| **1** | Set start’s reset option to true.The default false is shown here for completeness only; it is unlikely you would explicitly use it in practice. |
| ----- | ----------------------------------------------------------------------------------------------------------------------------------------------- |

## [](#lbl-repl-mon)Monitor

In this section

[Change Listeners](#lbl-repl-chng) | [Replicator Status](#lbl-repl-status) | [Monitor Document Changes](#lbl-repl-evnts) | [Documents Pending Push](#lbl-repl-pend)

You can monitor a replication’s status by using a combination of [Change Listeners](#lbl-repl-chng) and the `replication.status.activity` property — see; [Activity](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorStatus.html#Couchbase%5FLite%5FSync%5FReplicatorStatus%5FActivity). This enables you to know, for example, when the replication is actively transferring data and when it has stopped.

You can also choose to monitor document changes — see: [Monitor Document Changes](#lbl-repl-evnts).

### [](#lbl-repl-chng)Change Listeners

Use this to monitor changes and to inform on sync progress; this is an optional step. You can add and a replicator change listener at any point; it will report changes from the point it is registered.

> [!TIP]
> Best Practice
> 
> Don’t forget to save the token so you can remove the listener later

Use the [Replicator](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html) class to add a change listener as a callback to the Replicator ([addChangeListener()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FAddChangeListener%5FSystem%5FEventHandler%5FCouchbase%5FLite%5FSync%5FReplicatorStatusChangedEventArgs%5F%5F)) — see: [Example 13](#ex-repl-mon). You will then be asynchronously notified of state changes.

You can remove a change listener with [RemoveChangeListener(ListenerToken)](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FRemoveChangeListener%5FCouchbase%5FLite%5FListenerToken%5F).

### [](#lbl-repl-status)Replicator Status

You can use the [ReplicatorStatus](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorStatus.html) struct to check the replicator status. That is, whether it is actively transferring data or if it has stopped — see: [Example 13](#ex-repl-mon).

The returned _ReplicationStatus_ structure comprises:

* [Activity](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorStatus.html#Couchbase%5FLite%5FSync%5FReplicatorStatus%5FActivity) — stopped, offline, connecting, idle or busy — see states described in: [Table 5](#tbl-states)
* [Progress](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorStatus.html#Couchbase%5FLite%5FSync%5FReplicatorStatus%5FProgress)

  * completed — the total number of changes completed
  * total — the total number of changes to be processed
* [Error](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.ReplicatorStatus.html#Couchbase%5FLite%5FSync%5FReplicatorStatus%5FError) — the current error, if any

Example 13\. Monitor replication

* Adding a Change Listener
* Using replicator.status

```C#
#warning p2p-act-rep-add-change-listener-label used, but contains nothing
```

```C#

```

#### [](#lbl-repl-states)Replication States

[Table 5](#tbl-states) shows the different states, or activity levels, reported in the API; and the meaning of each.

__Table 5\. Replicator activity levels__
| State      | Meaning                                                                                                                           |
| ---------- | --------------------------------------------------------------------------------------------------------------------------------- |
| STOPPED    | The replication is finished or hit a fatal error.                                                                                 |
| OFFLINE    | The replicator is offline as the remote host is unreachable.                                                                      |
| CONNECTING | The replicator is connecting to the remote host.                                                                                  |
| IDLE       | The replication caught up with all the changes available from the server. The IDLE state is only used in continuous replications. |
| BUSY       | The replication is actively transferring data.                                                                                    |

> [!NOTE]
> The replication change object also has properties to track the progress (`change.status.completed` and `change.status.total`). Since the replication occurs in batches the total count can vary through the course of a replication.

#### [](#replication-status-and-app-life-cycle)Replication Status and App Life Cycle

Couchbase Lite doesn’t react to OS backgrounding or foregrounding events and replication(s) will continue running as long as the remote system does not terminate the connection and the app does not terminate. It is generally recommended to stop replications before going into the background otherwise socket connections may be closed by the OS and this may interfere with the replication process.

### [](#lbl-repl-evnts)Monitor Document Changes

You can choose to register for document updates during a replication.

For example, the code snippet in [Example 14](#ex-reg-doc-listener) registers a listener to monitor document replication performed by the replicator referenced by the variable `replicator`. It prints the document ID of each document received and sent. Stop the listener as shown in [Example 15](#ex-stop-doc-listener).

Example 14\. Register a document listener

```C#
var token = replicator.AddDocumentReplicationListener((sender, args) =>
{
    var direction = args.IsPush ? "Push" : "Pull";
    Console.WriteLine($"Replication type :: {direction}");
    foreach (var doc in args.Documents) {
        if (doc.Error == null) {
            Console.WriteLine($"Doc ID :: {doc.Id}");
            if (doc.Flags.HasFlag(DocumentFlags.Deleted)) {
                Console.WriteLine("Successfully replicated a deleted document");
            }
        } else {
            // There was an error
        }
    }
});

replicator.Start();
```

Example 15\. Stop document listener

This code snippet shows how to stop the document listener using the token from the previous example.

```C#
replicator.RemoveChangeListener(token);
```

#### [](#document-access-removal-behavior)Document Access Removal Behavior

When access to a document is removed on Sync Gateway (see: Sync Gateway’s [Sync Function](../../../sync-gateway/current/access-control/sync-function/sync-function-api.md)), the document replication listener sends a notification with the `AccessRemoved` flag set to `true` and subsequently purges the document from the database.

### [](#lbl-repl-pend)Documents Pending Push

> [!TIP]
> [Replicator.IsDocumentPending()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FIsDocumentPending%5FSystem%5FString%5F) is quicker and more efficient. Use it in preference to returning a list of pending document IDs, where possible.

You can check whether documents are waiting to be pushed in any forthcoming sync by using either of the following API methods:

* Use the [Replicator.GetPendingDocumentIDs()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FGetPendingDocumentIDs) method, which returns a list of document IDs that have local changes, but which have not yet been pushed to the server.  
This can be very useful in tracking the progress of a push sync, enabling the app to provide a visual indicator to the end user on its status, or decide when it is safe to exit.
* Use the [Replicator.IsDocumentPending()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FIsDocumentPending%5FSystem%5FString%5F) method to quickly check whether an individual document is pending a push.

Example 16\. Use Pending Document ID API

```C#
            var url = new Uri("ws://localhost:4984/mydatabase");
            var target = new URLEndpoint(url);
            var database = new Database("myDB");
            var config = new ReplicatorConfiguration(target);
            config.AddCollection(database.GetDefaultCollection());
            config.ReplicatorType = ReplicatorType.Push;

            var replicator = new Replicator(config);

            var pendingDocIDs =
              new HashSet<string>(replicator.GetPendingDocumentIDs(database.GetDefaultCollection())); (1)

            if (pendingDocIDs.Count > 0) {
                Console.WriteLine($"There are {pendingDocIDs.Count} documents pending");
                replicator.AddChangeListener((sender, change) =>
                {
                    Console.WriteLine($"Replicator activity level is " +
                                      change.Status.Activity.ToString());
                    // iterate and report-on previously
                    // retrieved pending docids 'list'
                    foreach (var docID in pendingDocIDs)
#warning replication-push-isdocumentpending unused?
                        if (!replicator.IsDocumentPending(docID, database.GetDefaultCollection())) (2)
                        {
                            Console.WriteLine($"Doc ID {docID} now pushed");
                        };
                });

                replicator.Start();
            }
```

| **1** | [Replicator.GetPendingDocumentIDs()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FGetPendingDocumentIDs) returns a list of the document IDs for all documents waiting to be pushed. This is a snapshot and may have changed by the time the response is received and processed. |
| ----- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **2** | [Replicator.IsDocumentPending()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FIsDocumentPending%5FSystem%5FString%5F) returns true if the document is waiting to be pushed, and false otherwise.                                                                                |

## [](#lbl-repl-stop)Stop

Stopping a replication is straightforward. It is done using [Stop()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FStop). This initiates an asynchronous operation and so is not necessarily immediate. Your app should account for this potential delay before attempting any subsequent operations.

You can find further information on database operations in [Databases](database.md).

Example 17\. Stop replicator

```C#
// Stop replication.
```

| **1** | Here we initiate the stopping of the replication using the [Stop()](http://docs.couchbase.com/mobile/3.1.10/couchbase-lite-net/api/Couchbase.Lite.Sync.Replicator.html#Couchbase%5FLite%5FSync%5FReplicator%5FStop) method. It will stop any active [change listener](#lbl-repl-chng) once the replication is stopped. |
| ----- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |

## [](#lbl-nwk-errs)Error Handling

When _replicator_ detects a network error it updates its status depending on the error type (permanent or temporary) and returns an appropriate HTTP error code.

The following code snippet adds a `Change Listener`, which monitors a replication for errors and logs the the returned error code.

Example 18\. Monitoring for network errors

```C#
replicator.AddChangeListener((sender, args) =>
{
    if (args.Status.Error != null) {
        Console.WriteLine($"Error :: {args.Status.Error}");
    }
});
```

**For permanent network errors** (for example, `404` not found, or `401` unauthorized): _Replicator_ will stop permanently, whether `setContinuous` is _true_ or _false_. Of course, it sets its status to `STOPPED`

**For recoverable or temporary errors:** _Replicator_ sets its status to `OFFLINE`, then:

* If `setContinuous=_true_` it retries the connection indefinitely
* If `setContinuous=_false_` (one-shot) it retries the connection a limited number of times.

The following error codes are considered temporary by the Couchbase Lite replicator and thus will trigger a connection retry.

* `408`: Request Timeout
* `429`: Too Many Requests
* `500`: Internal Server Error
* `502`: Bad Gateway
* `503`: Service Unavailable
* `504`: Gateway Timeout
* `1001`: DNS resolution error

## [](#load-balancers)Load Balancers

Couchbase Lite \[[2](#%5Ffootnotedef%5F2 "View footnote.")\] uses WebSockets as the communication protocol to transmit data. Some load balancers are not configured for WebSocket connections by default (NGINX for example); so it might be necessary to explicitly enable them in the load balancer’s configuration (see [Load Balancers](../../../sync-gateway/current/deploy/load-balancer.md)).

By default, the WebSocket protocol uses compression to optimize for speed and bandwidth utilization. The level of compression is set on Sync Gateway and can be tuned in the configuration file ([replicator\_compression](../../../sync-gateway/current/configuration/configuration-properties-legacy.md#replicator%5Fcompression)).

## [](#lbl-cert-pinning)Certificate Pinning

Couchbase Lite for C#.Net supports certificate pinning.

Certificate pinning is a technique that can be used by applications to "pin" a host to its certificate. The certificate is typically delivered to the client by an out-of-band channel and bundled with the client. In this case, Couchbase Lite uses this embedded certificate to verify the trustworthiness of the server (for example, a Sync Gateway) and no longer needs to rely on a trusted third party for that (commonly referred to as the Certificate Authority).

Couchbase Lite 3.0.2

For the 3.02\. release, changes have been made to the way certificates on the host are matched:

| Prior to CBL3.0.2 | The pinned certificate was only compared with the leaf certificate of the host. This is not always suitable as leaf certificates are usually valid for shorter periods of time. |
| ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| CBL-3.0.2+        | The pinned certificate will be compared against any certificate in the server’s certificate chain.                                                                              |

The following steps describe how to configure certificate pinning between Couchbase Lite and Sync Gateway.

1. [Create your own self-signed certificate](../../../sync-gateway/current/security/authentication-certs.md#creating-your-own-self-signed-certificate)with the `openssl` command. After completing this step, you should have 3 files: `cert.pem`, `cert.cer` and `privkey.pem`.
2. [Configure Sync Gateway](../../../sync-gateway/current/security/authentication-certs.md#installing-the-certificate)with the `cert.pem` and `privkey.pem` files. After completing this step, Sync Gateway is reachable over `https`/`wss`.
3. On the Couchbase Lite side, the replication must point to a URL with the `wss` scheme and configured with the `cert.cer` file created in step 1.  
This example loads the certificate from the application sandbox, then converts it to the appropriate type to configure the replication object.

Example 19\. Cert Pinnings

```C#
// Note: `GetCertificate` is a placeholder method. This would be the platform-specific method
// to find and load the certificate as an instance of `X509Certificate2`.
// For .NET Core / .NET Framework this can be loaded from the filesystem path.
// For WinUI, from the assets directory.
// For iOS, from the main bundle.
// For Android, from the assets directory.
var certificate = GetCertificate("cert.cer");
var config = new ReplicatorConfiguration(target)
{
    PinnedServerCertificate = certificate
};
```

1. Build and run your app. The replication should now run successfully over https/wss with certificate pinning.

For more on pinning certificates see the blog entry: [Certificate Pinning with Couchbase Mobile](https://blog.couchbase.com/certificate-pinning-android-with-couchbase-mobile/)

## [](#lbl-trouble)Troubleshooting

### [](#logs)Logs

As always, when there is a problem with replication, logging is your friend. You can increase the log output for activity related to replication with Sync Gateway — see [Example 20](#ex-logs).

Example 20\. Set logging verbosity

```C#

```

For more on troubleshooting with logs, see: [Using Logs](troubleshooting-logs.md).

### [](#authentication-errors)Authentication Errors

If Sync Gateway is configured with a self signed certificate but your app points to a `ws` scheme instead of `wss` you will encounter an error with status code `11006` — see: [Example 21](#ex-11006)

Example 21\. Protocol Mismatch

```console
CouchbaseLite Replicator ERROR: {Repl#2} Got LiteCore error: WebSocket error 1006 "connection closed abnormally"
```

If Sync Gateway is configured with a self signed certificate, and your app points to a `wss` scheme but the replicator configuration isn’t using the certificate you will encounter an error with status code `5011` — see: [Example 22](#ex-5011)

Example 22\. Certificate Mismatch or Not Found

```text
CouchbaseLite Replicator ERROR: {Repl#2} Got LiteCore error: Network error 11 "server TLS certificate is self-signed or has unknown root cert"
```

## [](#related-content)Related Content

###### [](#)

How to . . .

* [Prerequisites](#csharp:gs-prereqs.adoc)
* [Install](gs-install.md)
* [Build and Run](gs-build.md)

###### [](#-2)

Learn more . . .

* [Databases](database.md)
* [Documents](document.md)
* [Blobs](blob.md)
* [Remote Sync Gateway](replication.md)
* [Handling Data Conflicts](conflict.md)

###### [](#-3)

Dive Deeper . . .

[Mobile Forum](https://forums.couchbase.com/c/mobile/14) | [Blog](https://blog.couchbase.com/) | [Tutorials](https://docs.couchbase.com/tutorials/)

---

[1](#%5Ffootnoteref%5F1). Couchbase Mobile 2.5+ 

[2](#%5Ffootnoteref%5F2). From 2.0